--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,18 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-image: url("../public/header_background.png");
+  background-size: cover;
+  background-position: center;
+  height: 200px;
   padding: 20px;
-  color: white;
+  color: black;
+  text-align: left;
+  font-family: 'Comic Sans MS', SansSerif, sans-serif;
 }
 
 .App-intro {
