--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   padding: 20px;
   color: black;
   text-align: left;
+  font-size: 30px;
   font-family: 'Comic Sans MS', SansSerif, sans-serif;
 }
 
