--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: lightblue;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
 }
 
 .App-logo {
@@ -8,19 +11,25 @@
 }
 
 .App-header {
-  background-image: url("../public/header_background.png");
-  background-size: cover;
-  background-position: center;
-  height: 200px;
+  background-color: #222222;
+  height: 125px;
   padding: 20px;
-  color: black;
+  color: lightsteelblue;
   text-align: left;
-  font-size: 30px;
+  font-size: large;
   font-family: 'Comic Sans MS', SansSerif, sans-serif;
 }
 
 .App-intro {
   font-size: large;
+}
+
+.App-content-section {
+  background-color: lightskyblue;
+  margin: auto;
+  width: 90%;
+  padding-top: 1px;
+  padding-bottom: 20px;
 }
 
 @keyframes App-logo-spin {
