--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Futura;
   background-color: lightsteelblue;
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
